# meine_db_anwendung

./: CMakeLists.txt  LICENSE  Makefile  README.md  test  test.json
src/: lagerhaltungssystem.cc  main.cc  test.json
